process bar search form action fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -534,4 +534,22 @@ table.search_bar th{
 .info-false {
 	display: none;
 }
+
+.progressbar_core {
+	height: 10px;
+	background: #C3C3C3;
+	margin-bottom: 5px;
+}
+
+.progressbar_core .ui-progressbar-value {
+	background: #B5E51D;
+}
+
+.progressbar_full {
+	height: 10px;
+	background: #C3C3C3;
+}
+
+.progressbar_full .ui-progressbar-value {
+	background: #00A3E8;
 }
